<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.muhaem.app.pemilos16.MainActivity">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/colorAbuSMA"
        android:text="@string/app_name"
        android:shadowColor="@color/colorShadowMain"
        android:shadowRadius="5"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:layout_below="@+id/tvName">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:text="@string/app_desc"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvDev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvDesc"
                android:layout_marginTop="27dp"
                android:gravity="center"
                android:text="@string/app_dev"
                android:textColor="@color/colorAbuSMA"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvInstr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvDev"
                android:layout_marginTop="37dp"
                android:gravity="center"
                android:text="@string/app_instr"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/etNISN"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvInstr"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@color/colorWhite"
                android:gravity="center"
                android:hint="NISN"
                android:maxLength="15"
                android:maxLines="1"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorAbuSMA"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_pilih"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etNISN"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/app_btn"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </ScrollView>


</RelativeLayout>
